--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -24,6 +24,7 @@ rounded-corners-exclude = [
   #"class_g = 'Polybar'",
   #"class_g = 'TelegramDesktop'",
   #"class_g = 'firefox'",
+  #"class_g = 'firefox'",
 ];
 round-borders = 1;
 round-borders-exclude = [
