--- a/ranger/rc.conf
+++ b/ranger/rc.conf
@@ -1,5 +1,6 @@
 set preview_images true
-set preview_images_method kitty
+# set preview_images_method kitty
+set preview_images_method ueberzug
 default_linemode devicons
 set colorscheme zenburn
 set draw_borders outline 
