--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -257,7 +257,7 @@ blur: {
   # requires: https://github.com/ibhagwan/picom
   method = "kawase";
   #method = "kernel";
-  strength = 2;
+  strength = 1;
   # deviation = 1.0;
   # kernel = "11x11gaussian";
   background = false;
@@ -276,7 +276,7 @@ blur-background-exclude = [
   # when taking selection screenshot with `main`
   # https://github.com/naelstrof/maim/issues/130
   "class_g = 'slop'",
-  "class_g = 'kitty'",
+  # "class_g = 'kitty'",
   "class_g ?= 'Notify-osd'",
   "_GTK_FRAME_EXTENTS@:c",
 ];
